fixed horizontal scroll issue caused by pose and fixed image ordering in mobile in skills

--- a/src/stylesheets/components/ImageExperience.module.sass
+++ b/src/stylesheets/components/ImageExperience.module.sass
@@ -1,12 +1,3 @@
-.titleMargin
-  margin: 15px 0
-
-.subtitleMargin
-  margin: 10px 0
-
-.point
-  cursor: pointer
-
 /* the following style is here to fix the horizontal scroll issue when you animate elements using pose (scale 1.02)*/
 .mobileSize
   @media (max-width: 768px)
